package com.chaos.dr.strange.module.model.proto;

message TaskProto {
    required uint32 primary = 1;
    required uint32 typ = 2;
    required uint64 delayTo = 3;
    required string reqTyp = 4;
    required string reqUrl = 5;
    required string reqContent = 6;
}